--- a/index.html
+++ b/index.html
@@ -51,14 +51,9 @@
                     <img src="pics/6.JPG" alt="Image 6">
                     <div class="carousel-caption">Hiking in the Erawan National Park, Thailand (2018)</div>
                 </div>
-                <!-- <div class="carousel-item">
-                    <img src="pics/7.JPG" alt="Image 7">
-                    <div class="carousel-caption">Water rappelling in the Western Ghats of India (2019)</div>
-                </div> -->
             </div>
         </div>
         <div class="bio">
-            <!-- <h2>About Me</h2> -->
             <p>I am a Ph.D. candidate in Media Arts and Sciences at the Massachusetts Institute of Technology (MIT), where my research focuses on spintronics and sustainable computing. I hold a Master of Science (S.M.) from MIT, where I studied van der Waals (vdW) magnetic materials for spintronic applications. Prior to this, I earned a dual degree (B.Tech + M.Tech) in Electrical Engineering from the Indian Institute of Technology (IIT) Bombay, where my thesis focused on the interaction of Surface Acoustic Waves and Magnetization.</p>
             <p>My current research involves developing nanoscale devices using 2D magnetic materials and designing brain-inspired stochastic computing hardware, to achieve scalable and energy-efficient computing technologies. My graduate work has tackled some fundamental issues in translating vdW magnets into spintronic technologies, by creating the first device for field-free electrical control of vdW magnets above room temperature. My work was recognized with the MIT-HPI Design for Sustainability Grant in 2023. I have also delivered a talk at TEDxBoston’s Planetary Stewardship forum on sustainable computation. My ongoing work is driven by a commitment to advancing sustainable and energy-efficient computing technologies.</p>
             <p>An engineer at heart, I find joy in building things and have designed and built several setups for fabrication and measurements during my time at MIT, gaining valuable experience in instrumentation and automation. Outside of work, I enjoy traveling, particularly hiking in the mountains, camping, and relaxing at the beach. I am also trained in playing the harmonium and love playing snooker.</p>
@@ -76,6 +71,7 @@
             <div class="news-updates">
                 <h2>News and Updates</h2>
                 <ul>
+                    <li>Jun, 2024: Oral presentation at the 24th International Conference on the Science and Applications of Nanotubes and Low-Dimensional Materials (<b>NT24</b>), titled "Field-free deterministic switching of a van der Waals ferromagnet above room temperature".
                     <li>Apr, 2024: Delivered a talk at the NanoBio Seminar Series at MIT, titled "Propelling van der Waals magnets towards energy-efficient spintronics".</li>
                     <li>Apr, 2024: My research on field-free switching of vdW magnetic materials was covered by <b>Nature Reviews Electrical Engineering</b>. Check out the full article <a href="https://www.nature.com/articles/s44287-024-00048-3">here</a>. </li>
                     <li>Mar, 2024: We have accomplished field-free switching of vdW magnetic materials at room temperature. Check out my <a href="https://www.science.org/doi/10.1126/sciadv.adk8669">article</a> in <b>Science Advances</b>, describing this work.<br>
@@ -85,7 +81,6 @@
                     <li>Jul, 2023: Our proposal for developing energy efficient stochastic computing devices, with collaborators from HPI, Germany, has been awarded the <b>Design for Sustainability Grant</b>.</li>
                     <li>Jun, 2023: Graduated with a <b>Master of Science</b> in Media Arts and Sciences from MIT. Will be continuing as a Ph.D. student.</li>
                     <li>Nov, 2022: Delivered a talk, titled "Making computing sustainable", at <b>TEDxBoston</b>, describing my vision and research for developing sustainable computing technologies.</li>
-                    <!-- Add more updates as needed -->
                 </ul>
             </div>
         </div>
