Reduce picture in carousal

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                     <img src="pics/1.JPG" alt="Image 1">
                     <div class="carousel-caption">Commencement Day at MIT (2023)</div>
                 </div>
-                <div class="carousel-item">
-                    <img src="pics/2.JPG" alt="Image 2">
+<!--                 <div class="carousel-item"> -->
+<!--                     <img src="pics/2.JPG" alt="Image 2">
                     <div class="carousel-caption">Gurudongmar Lake in Sikkim, India (2020)</div>
-                </div>
+                </div> -->
                 <div class="carousel-item">
                     <img src="pics/3.JPG" alt="Image 3">
                     <div class="carousel-caption">Measuring a magnetic sample using the Mageto-optical Kerr effect (2023)</div>
@@ -47,10 +47,10 @@
                     <img src="pics/5.JPG" alt="Image 5">
                     <div class="carousel-caption">Delivering a talk at TEDxBoston (2022)</div>
                 </div>
-                <div class="carousel-item">
+<!--                 <div class="carousel-item">
                     <img src="pics/6.JPG" alt="Image 6">
                     <div class="carousel-caption">Hiking in the Erawan National Park, Thailand (2018)</div>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="bio">
